--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,10 @@
-$breakpoint-tablet: 768px;
-$breakpoint-desktop: 1200px;
-$breakpoint-wide: 1400px;
+// Breakpoints
+$mobile-max: 767px;
+$tablet-min: 768px;
+$tablet-max: 991px;
+$desktop-min: 992px;
+$desktop-max: 1199px;
+$wide-min: 1400px;
 
 $brand-primary: #2e2b45;
 $brand-secondary: #f8d178;
