--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,3 +1,5 @@
+@use './variables' as *;
+
 @use 'theme';
 @use 'animations';
 
@@ -38,8 +40,13 @@ body {
 }
 
 #app > main {
-  margin-top: -120px;
-  padding-top: 120px;
+  margin-top: -64px;
+  padding-top: 64px;
+
+  @media only screen and (min-width: $tablet-min) {
+    margin-top: -120px;
+    padding-top: 120px;
+  }
 }
 
 small {
