--- a/src/scss/widgets/navbar.scss
+++ b/src/scss/widgets/navbar.scss
@@ -1,10 +1,20 @@
 @use '../elements/button' as b;
 @use '../mixins' as m;
+@use '../variables' as *;
 
 .main-header {
   position: sticky;
-  top: -48px;
+  top: 0;
   z-index: 3;
+
+  @media only screen and (min-width: $tablet-min) {
+    top: -48px;
+  }
+
+  .header-wrap {
+    display: flex;
+    flex-direction: column-reverse;
+  }
 
   .module-dropdown {
     position: relative;
@@ -45,6 +55,12 @@
     padding-top: 6px;
     padding-bottom: 6px;
     margin: 0 -12px;
+    display: flex;
+    justify-content: space-between;
+
+    @media only screen and (max-width: $mobile-max) {
+      display: none;
+    }
 
     a {
       font-style: normal;
@@ -153,6 +169,8 @@
     margin: 0 -12px;
     padding: 0 12px;
     box-shadow: 0px 0px 2px rgba(14, 31, 53, 0.12);
+    display: flex;
+    flex-direction: row;
 
     a {
       font-style: normal;
@@ -165,18 +183,78 @@
       text-decoration: none;
     }
 
+    .mobile-menu {
+      width: 0;
+      align-self: center;
+      display: inline-flex;
+
+      @media only screen and (min-width: $tablet-min) {
+        display: none;
+      }
+
+      > button {
+        @include m.button-reset;
+        width: 28px;
+        height: 28px;
+
+        > i {
+          display: inline-flex;
+        }
+        > i,
+        > i > svg {
+          width: inherit;
+          height: inherit;
+        }
+      }
+    }
+
     .brand {
       padding: 12px;
-      margin-right: 48px;
+      margin-left: auto;
+      margin-right: auto;
+
+      @media only screen and (max-width: $mobile-max) {
+        display: inline-flex;
+
+        > a {
+          width: 41px;
+          overflow: hidden;
+
+          img {
+            height: 40px !important;
+          }
+        }
+      }
+
+      @media only screen and (min-width: $tablet-min) {
+        margin-left: unset;
+        margin-right: 48px;
+      }
     }
 
     .module {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
       &:last-of-type {
-        margin-left: auto;
+        width: 0;
+        justify-content: flex-end;
+
+        @media only screen and (min-width: $tablet-min) {
+          margin-left: auto;
+        }
       }
 
       &-user {
         padding: 0 12px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        @media only screen and (max-width: $mobile-max) {
+          display: none;
+        }
 
         span {
           font-style: normal;
@@ -207,6 +285,18 @@
       }
 
       &-dropdown {
+        > a {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+        }
+
+        @media only screen and (max-width: $mobile-max) {
+          > a {
+            display: none;
+          }
+        }
+
         .menu {
           padding-top: 12px;
           left: -20px;
@@ -298,6 +388,10 @@
       &-cart {
         @extend .module-search;
         margin-right: 20px;
+
+        @media only screen and (max-width: $mobile-max) {
+          display: none;
+        }
       }
 
       &-search i,
@@ -311,11 +405,25 @@
         }
       }
 
+      &-user-mobile {
+        @extend .module-search;
+        margin-right: 0;
+        margin-left: 8px;
+
+        @media only screen and (min-width: $tablet-min) {
+          display: none;
+        }
+      }
+
       &-v-separator {
         width: 1px;
         height: 100%;
         margin: 0 12px;
         border-left: 1px solid rgba(46, 43, 69, 0.1);
+
+        @media only screen and (max-width: $mobile-max) {
+          display: none;
+        }
       }
     }
   }
