--- a/src/scss/widgets/navbar.scss
+++ b/src/scss/widgets/navbar.scss
@@ -249,6 +249,7 @@
       &-user {
         padding: 0 12px;
         display: flex;
+        flex: 0 0 auto;
         flex-direction: row;
         align-items: center;
 
