--- a/src/views/Index/podcast.html
+++ b/src/views/Index/podcast.html
@@ -1,4 +1,4 @@
-<section class="col-8">
+<section class="col-12 col-md-8">
   <h2 class="light">Podcasts</h2>
   <p>
     Labore duis sit labore et pariatur qui sint aliquip sunt commodo
@@ -22,25 +22,15 @@
       <% for (const item of items) { %>
       <div class="row-wrap">
         <div class="row">
-          <div
-            class="col-6 d-flex flex-row align-self-center align-items-center"
-          >
+          <div class="col-6">
             <div class="cover">
               <img src="<%= require(`/src/images/${item.cover}`) %>" alt="" />
             </div>
             <strong><%= item.title %></strong>
           </div>
-          <div class="col-3 d-flex flex-row align-self-center">
-            <%= item.author %>
-          </div>
-          <div
-            class="col d-flex flex-row align-self-center justify-content-end"
-          >
-            <%= item.duration %>
-          </div>
-          <div
-            class="col d-flex flex-row align-self-center justify-content-end"
-          >
+          <div class="col-3"><%= item.author %></div>
+          <div class="col"><%= item.duration %></div>
+          <div class="col">
             <div id="<%= item.id %>" class="podcast-preview">
               <button class="preview-switch">
                 <i><%= require('../../images/icons/play.svg?inline') %></i>
