--- a/src/scss/elements/section.scss
+++ b/src/scss/elements/section.scss
@@ -1,9 +1,16 @@
+@use '../variables' as *;
+
 section {
   h2 {
     font-style: normal;
     font-weight: bold;
     font-size: 28px;
     line-height: 34px;
+
+    @media only screen and (max-width: $mobile-max) {
+      font-size: 22px;
+      line-height: 28px;
+    }
 
     &.dark {
       color: #fff;
