--- a/src/scss/elements/table.scss
+++ b/src/scss/elements/table.scss
@@ -1,8 +1,14 @@
+@use '../variables' as *;
+
 .table {
   padding-top: 27px;
-  padding-right: 24px;
+  padding-right: 0;
   margin-top: -16px;
   margin-bottom: 0;
+
+  @media only screen and (min-width: $desktop-min) {
+    padding-right: 24px;
+  }
 
   &-head {
     border-bottom: 1px solid rgba(46, 43, 69, 0.1);
@@ -42,6 +48,12 @@
           }
         }
       }
+
+      @media only screen and (max-width: $mobile-max) {
+        &:nth-child(2) {
+          display: none;
+        }
+      }
     }
   }
 
@@ -62,6 +74,23 @@
       line-height: 20px;
       letter-spacing: -0.24px;
       color: #2e2b45;
+      display: flex;
+      flex-direction: row;
+      align-self: center;
+
+      &:first-child {
+        align-items: center;
+      }
+      &:nth-child(3),
+      &:last-child {
+        justify-content: flex-end;
+      }
+
+      @media only screen and (max-width: $mobile-max) {
+        &:nth-child(2) {
+          display: none;
+        }
+      }
 
       strong {
         font-weight: 600;
@@ -72,6 +101,7 @@
         width: 32px;
         height: 32px;
         margin-right: 12px;
+        flex-shrink: 0;
 
         img {
           width: 100%;
