--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -1,3 +1,4 @@
+@use '../variables' as *;
 @use '../elements/button' as b;
 
 .index {
@@ -5,6 +6,11 @@
     &:nth-child(2) {
       padding-top: 56px;
       padding-bottom: 56px;
+
+      @media only screen and (max-width: $mobile-max) {
+        padding-top: 36px;
+        padding-bottom: 36px;
+      }
 
       .carousel {
         margin-top: 20px;
@@ -14,13 +20,32 @@
         @include b.button("medium", "secondary");
         width: auto;
         margin: 32px auto 0;
+
+        @media only screen and (max-width: $mobile-max) {
+          margin-top: 12px;
+        }
       }
     }
 
     &:nth-child(3) {
-      background-color: #2e2b45;
+      background-color: var(--brand-primary);
       padding-top: 28px;
       margin-bottom: 83px;
+
+      @media only screen and (max-width: $mobile-max) {
+        h2 + div {
+          flex-wrap: wrap;
+
+          > p {
+            flex-grow: 1;
+          }
+
+          > div {
+            margin-left: 0;
+            padding-left: 0;
+          }
+        }
+      }
 
       .carousel {
         margin-bottom: -71px;
@@ -41,6 +66,20 @@
             width: auto;
             margin-top: 36px;
           }
+
+          @media only screen and (max-width: $mobile-max) {
+            display: flex;
+            flex-direction: column;
+
+            .button {
+              margin-left: auto;
+              margin-right: auto;
+            }
+          }
+        }
+
+        &:first-child {
+          margin-bottom: 36px;
         }
       }
     }
@@ -48,6 +87,10 @@
     &:nth-child(5) {
       padding-top: 36px;
       padding-bottom: 56px;
+
+      @media only screen and (max-width: $mobile-max) {
+        padding-bottom: 36px;
+      }
 
       .carousel {
         margin-top: 20px;
@@ -57,6 +100,10 @@
         @include b.button("medium", "secondary");
         width: auto;
         margin: 32px auto 0;
+
+        @media only screen and (max-width: $mobile-max) {
+          margin-top: 12px;
+        }
       }
     }
   }
