--- a/src/scss/widgets/carousel.scss
+++ b/src/scss/widgets/carousel.scss
@@ -1,3 +1,4 @@
+@use '../variables' as *;
 @use "/node_modules/swiper/swiper.scss";
 @use "/node_modules/swiper/components/a11y/a11y.scss";
 @use "/node_modules/swiper/components/navigation/navigation.scss";
@@ -7,11 +8,29 @@
   }
 
   &[data-carousel-type="free-scroll"] {
+    @media only screen and (max-width: $mobile-max) {
+      .carousel-container {
+        padding-left: 12px;
+        padding-right: 12px;
+      }
+
+      .card {
+        opacity: 1 !important;
+        transform: scale(1) translateX(0) !important;
+      }
+    }
   }
 
   &-container {
     margin: 0 -24px -28px;
     padding: 0 24px 52px;
+
+    @media only screen and (max-width: $mobile-max) {
+      padding-left: 64px;
+      padding-right: 64px;
+      margin-left: -12px;
+      margin-right: -12px;
+    }
   }
 
   &-item {
@@ -29,7 +48,44 @@
     }
     &.swiper-slide-active {
       .card {
-        box-shadow: 0px 28px 40px -1px rgba(14, 31, 53, 0.12) impot !important;
+        box-shadow: 0px 28px 40px -1px rgba(14, 31, 53, 0.12) !important;
+      }
+    }
+
+    @media only screen and (max-width: $mobile-max) {
+      .card {
+        transition-property: opacity, transform;
+        transition-duration: 0.125s;
+        transition-timing-function: ease-in;
+      }
+
+      &.swiper-slide-prev,
+      &.swiper-slide-duplicate-active {
+        .card {
+          box-shadow: 0px 28px 40px -1px rgba(14, 31, 53, 0.12) !important;
+        }
+      }
+
+      &.swiper-slide-prev,
+      &.swiper-slide-next {
+        .card {
+          opacity: 0.3;
+        }
+      }
+
+      &.swiper-slide-prev .card {
+        transform: scale(0.9) translateX(16px);
+      }
+
+      &.swiper-slide-next .card {
+        transform: scale(0.9) translateX(-16px);
+      }
+
+      &.swiper-slide-active {
+        .card {
+          opacity: 1;
+          transform: scale(1) translateX(0);
+        }
       }
     }
   }
@@ -70,11 +126,21 @@
     &-left {
       left: 0;
       margin-left: -12px;
+
+      @media only screen and (max-width: $mobile-max) {
+        left: 64px;
+        margin-left: -56px;
+      }
     }
 
     &-right {
       right: 0;
       margin-right: -12px;
+
+      @media only screen and (max-width: $mobile-max) {
+        right: 64px;
+        margin-right: -56px;
+      }
     }
   }
 }
