--- a/src/views/Index/hero.html
+++ b/src/views/Index/hero.html
@@ -1,7 +1,7 @@
-<div class="hero d-flex align-items-center">
+<div class="hero">
   <div class="container">
     <div class="row">
-      <div class="col-6 d-flex flex-column justify-content-center">
+      <div class="col-12 col-sm-9 col-md-9 col-lg-6 headline-wrap">
         <h1><%= headline %></h1>
         <a
           href="/explore"
