--- a/src/views/ContentDetail/sidebar.html
+++ b/src/views/ContentDetail/sidebar.html
@@ -17,8 +17,8 @@
         <div class="shop-ctas">
           <button class="button-medium button-secondary">Buy Course</button>
           <button class="button-medium" aria-label="Add to wishlist">
-            <i><%= require('/src/images/icons/love.svg?inline') %></i>Add to
-            wishlist
+            <i><%= require('/src/images/icons/love.svg?inline') %></i>
+            <span>Add to wishlist</span>
           </button>
         </div>
       </div>
