--- a/src/scss/pages/contentDetails.scss
+++ b/src/scss/pages/contentDetails.scss
@@ -1,6 +1,11 @@
+@use '../variables' as *;
 @use '../mixins' as m;
 @use '../elements/button' as b;
 @use '../elements/author';
+
+.content-details + .main-footer {
+  padding-bottom: 66px;
+}
 
 .content-details {
   background-color: #f1f2f3;
@@ -10,6 +15,10 @@
     padding-top: 32px;
     padding-bottom: 32px;
     position: relative;
+
+    @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+      padding-top: calc(9 / 16 * 100% + 24px);
+    }
   }
 
   &-bottom {
@@ -25,6 +34,15 @@
 
   .content-wrap {
     padding-right: 384px;
+
+    @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+      padding-right: 0;
+
+      &.col {
+        padding-right: 12px;
+        z-index: 0;
+      }
+    }
   }
 
   .breadcrumb {
@@ -96,6 +114,14 @@
       height: 100%;
       padding-top: 32px;
       padding-bottom: 24px;
+      z-index: 1;
+
+      @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+        width: 100%;
+        height: auto;
+        left: 0;
+        padding: 0;
+      }
     }
 
     &-wrap {
@@ -107,10 +133,37 @@
       border-radius: 24px;
       overflow: hidden;
       box-shadow: 0px 3px 7px rgba(14, 31, 53, 0.12);
+
+      @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+        width: 100%;
+        border-radius: 0;
+        box-shadow: none;
+        overflow: visible;
+      }
     }
 
     &-content {
       padding: 24px 12px;
+
+      @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        background-color: var(--brand-white);
+        padding-top: 10px;
+        padding-bottom: 10px;
+        box-shadow: 0px -2px 4px rgba(14, 31, 53, 0.12);
+      }
+    }
+
+    &-cover {
+      @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+        &::before {
+          padding-top: calc(9 / 16 * 100%);
+        }
+      }
     }
 
     hr {
@@ -121,8 +174,19 @@
     }
 
     .shop {
+      @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+      }
+
       &-price {
         margin-bottom: 12px;
+
+        @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+          margin-bottom: 0;
+        }
 
         &[data-is-free="true"] {
           > span {
@@ -155,11 +219,19 @@
         display: flex;
         flex-direction: column;
 
+        @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+          flex-direction: row-reverse;
+        }
+
         > button {
           flex-grow: 1;
           border-radius: 4px;
           margin: 6px 0;
           @include m.button-reset;
+
+          @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+            margin: 0;
+          }
 
           &:first-child {
             @include b.button("medium", "secondary");
@@ -177,6 +249,20 @@
             i {
               margin-right: 8px;
               @include m.inline-svg-icon(28px, var(--brand-orange));
+            }
+
+            @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+              width: 60px;
+              padding: 0 !important;
+              margin-right: 12px;
+
+              > span {
+                display: none;
+              }
+
+              > i {
+                margin-right: 0;
+              }
             }
           }
         }
@@ -310,6 +396,11 @@
           flex-direction: row;
           align-items: center;
           justify-content: space-between;
+
+          @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+            flex-direction: column;
+            align-items: flex-start;
+          }
 
           .length {
             color: rgba(46, 43, 69, 0.6);
@@ -529,6 +620,13 @@
       letter-spacing: 0.75px;
       color: var(--brand-primary);
       margin-bottom: 12px;
+    }
+
+    @media only screen and (max-width: $mobile-max) and (orientation: portrait) {
+      .carousel-container {
+        padding-left: 0;
+        padding-right: 0;
+      }
     }
   }
 }
