--- a/src/views/Lesson/layout.html
+++ b/src/views/Lesson/layout.html
@@ -62,6 +62,8 @@
           <div class="notes-log"></div>
         </div>
 
+        <div class="mobile-curriculum"></div>
+
         <footer class="related">
           <h2>Related Courses You May Like</h2>
           <div class="related-courses-wrap row">
