--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -18,6 +18,7 @@
 @use 'widgets/preloader';
 @use 'widgets/breadcrumb';
 @use 'widgets/pagination';
+@use 'widgets/mobileSideNav';
 @use 'widgets/cards/video';
 @use 'widgets/cards/product';
 
@@ -31,6 +32,10 @@ body {
   background-color: white;
   font-family: "Inter", sans-serif;
   font-size: 16px;
+
+  &.no-scroll {
+    overflow: hidden;
+  }
 }
 
 #app,
