⚡️Regular stylesheets and theme improvement

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,8 +4,11 @@ $tablet-min: 768px;
 $tablet-max: 991px;
 $desktop-min: 992px;
 $desktop-max: 1199px;
-$wide-min: 1400px;
+$xwide-min: 1200px;
+$xwide-max: 1399px;
+$xxwide-min: 1400px;
 
+// Brand Colors
 $brand-primary: #2e2b45;
 $brand-secondary: #f8d178;
 $brand-orange: #e95244;
