--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -9,6 +9,7 @@
 @use 'elements/hero';
 @use 'elements/table';
 @use 'elements/section';
+@use 'elements/buttonv2';
 @use 'elements/categories';
 
 @use 'widgets/footer';
