--- a/src/views/Index/hero.html
+++ b/src/views/Index/hero.html
@@ -1,13 +1,15 @@
 <div class="hero">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 col-sm-9 col-md-9 col-lg-6 headline-wrap">
-        <h1><%= headline %></h1>
-        <a
-          href="/explore"
-          class="button button-large button-secondary align-self-start"
-          ><%= buttonLabel %></a
-        >
+  <div class="hero-wrap ratio ratio-16x9 ratio-mobile-1x1 ratio-tablet-4x3">
+    <img src="<%= require('/src/images/hero-bg.jpg') %>" alt="" />
+
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-sm-9 col-md-9 col-lg-6 hero-headline">
+          <h1><%= headline %></h1>
+          <a href="/explore" class="button button-large button-secondary"
+            ><%= buttonLabel %></a
+          >
+        </div>
       </div>
     </div>
   </div>
