--- a/src/scss/pages/lesson.scss
+++ b/src/scss/pages/lesson.scss
@@ -25,11 +25,24 @@
       > .row > .col {
         padding-left: 0;
         padding-right: 0;
+        display: flex;
+        flex-direction: column;
       }
     }
   }
 
   .video {
+    @media only screen and (max-width: $mobile-max) {
+      &::before {
+        padding-top: calc(100% * 3 / 4);
+      }
+    }
+
+    @media only screen and (max-width: $mobile-max),
+      only screen and (max-width: $tablet-max) and (orientation: portrait) {
+      order: 0;
+    }
+
     > iframe {
       width: 100% !important;
       height: 100% !important;
@@ -41,6 +54,11 @@
     margin-bottom: 24px;
     border-radius: 4px;
     box-shadow: 0px 2px 4px rgba(14, 31, 53, 0.12);
+
+    @media only screen and (max-width: $mobile-max),
+      only screen and (max-width: $tablet-max) and (orientation: portrait) {
+      order: 3;
+    }
 
     .description-accordion {
       border: 0;
@@ -115,6 +133,11 @@
     box-shadow: 0px 2px 4px rgba(14, 31, 53, 0.12);
     padding: 16px 12px;
 
+    @media only screen and (max-width: $mobile-max),
+      only screen and (max-width: $tablet-max) and (orientation: portrait) {
+      order: 2;
+    }
+
     > h2 {
       font-style: normal;
       font-weight: 600;
@@ -164,6 +187,11 @@
 
     @media only screen and (min-width: $tablet-max) {
       display: none;
+    }
+
+    @media only screen and (max-width: $mobile-max),
+      only screen and (max-width: $tablet-max) and (orientation: portrait) {
+      order: 1;
     }
 
     .curriculum-tabs {
@@ -338,6 +366,7 @@
       only screen and (max-width: $tablet-max) and (orientation: portrait) {
       padding-left: 12px;
       padding-right: 12px;
+      order: 4;
 
       .carousel-container {
         padding-left: 12px;
